@@ -120,11 +120,6 @@ production conversions.</p>
     output directly into git-fast-import; this should also speed up
     the conversion.</li>
 
-  <li>There is no support for an "authors" file to map intelligently
-    from CVS author names to git "Author &lt;email&gt;" format.
-    (Currently, the git author is set to "cvs-author
-    &lt;cvs-author&gt;".)</li>
-
   <li>Only single projects can be converted at a time.  Given the way
     git is typically used, I don't think that this is a significant
     limitation.</li>
